# f-word-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  server.c
http/: f_word_reqponse.c  f_word_reqponse.h  f_word_request.c  f_word_request.h  fuck_request.cpp  fuck_request.h
socket/: client.c  http_example  server.c  server.cpp
